tests/neg/experimental-message.check
-- Error: tests/neg/experimental-message.scala:15:2 --------------------------------------------------------------------
15 |  f1() // error
   |  ^^
   |  method f1 is marked @experimental
   |
   |  Experimental definition may only be used under experimental mode:
   |    1. in a definition marked as @experimental, or
   |    2. an experimental feature is imported at the package level, or
   |    3. compiling with the -experimental compiler flag, or
   |    4. with a nightly or snapshot version of the compiler.
-- Error: tests/neg/experimental-message.scala:16:2 --------------------------------------------------------------------
16 |  f2() // error
   |  ^^
   |  method f2 is marked @experimental
   |
   |  Experimental definition may only be used under experimental mode:
   |    1. in a definition marked as @experimental, or
   |    2. an experimental feature is imported at the package level, or
   |    3. compiling with the -experimental compiler flag, or
   |    4. with a nightly or snapshot version of the compiler.
-- Error: tests/neg/experimental-message.scala:17:2 --------------------------------------------------------------------
17 |  f3() // error
   |  ^^
   |  method f3 is marked @experimental: not yet stable
   |
   |  Experimental definition may only be used under experimental mode:
   |    1. in a definition marked as @experimental, or
   |    2. an experimental feature is imported at the package level, or
   |    3. compiling with the -experimental compiler flag, or
   |    4. with a nightly or snapshot version of the compiler.
